Add request basic logic done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
 
     <string name="volunteer_type">volunteer</string>
     <string name="disabled_type">disabled</string>
+    <string name="title_activity_toberemove">Map</string>
 </resources>
